docs: make errors go away
